--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
     </script>
     <script id="fragment-shader" type="x-shader/x-fragment">
       precision mediump float;
+      uniform vec4 vColor;
       void main() {
-          gl_FragColor = vec4(0.0, 1.0, 1.0, 1.0);
+          gl_FragColor = vColor;
       }
     </script>
     <script type="text/javascript" src="../Common/webgl-utils.js"></script>
