--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       uniform float amp;
       uniform float angFreq;
       uniform float phase;
+
       uniform float time;
+
       uniform float vScale;
       uniform float hScale;
 
@@ -52,17 +54,10 @@
 
   <body>
     <title>CGI - Oscilloscope</title>
-    <canvas id="gl-canvas" width="800" height="600">
+    <canvas id="gl-canvas" width="1080" height="720">
       Oops... your browser doesn't support the HTML5 canvas element"
     </canvas>
     <br />
-    <label>Wave 1:</label>
-    <label class="switch">
-    <select id="select-func">
-      <option value="sin">Sin</option>
-      <option value="cos">Cos</option>
-      <option value="tan">Tan</option>
-    </select>
     <label>Y-Scale: </label>
     <select id="vertical-scale-selector">
       <option value="0.1">0.1 V</option>
@@ -78,6 +73,14 @@
       <option value="200.0">200.0 V</option>
       <option value="500.0">500.0 V</option>
     </select>
+    <label>Y-Signal</label>
+    <select id="y-note-selector">
+      <option value="C4" selected="selected">C4</option>
+      <option value="C4M">C4 Major</option>
+      <option value="F4F#">F4 + F4#</option>
+      <option value="zero">Zero</option>
+    </select>
+  </br>
     <label>X-Scale:</label>
     <select id="horizontal-scale-selector">
       <option value="0.0001">1e-4 s</option>
@@ -97,24 +100,14 @@
       <option value="5.0">5 s</option>
       <option value="10.0">10 s</option>
     </select>
-    <label>Frequency: </label>
-    <input
-      type="range"
-      min="0"
-      max="6.2831852"
-      value="3.1415926"
-      step="0.05"
-      id="frequency-slider"
-    />
-    <label>Phase: </label>
-    <input
-      type="range"
-      min="0"
-      max="6.2831852"
-      value="3.1415926"
-      step="0.05"
-      id="phase-slider"
-    />
+    <label>X-Signal</label>
+    <select id="x-note-selector">
+      <option value="time" selected="selected">Time</option>
+      <option value="C4">C4</option>
+      <option value="C4M">C4 Major</option>
+      <option value="F4F4#">F4 + F4#</option>
+      <option value="zero">Zero</option>
+    </select>
   </body>
   <script type="text/javascript" src="app.js"></script>
 </html>
