--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
       uniform int func;
 
       uniform float amp;
-      uniform float angFreq;
       uniform float phase;
+      uniform vec3 notes;
+      uniform int numNotes;
 
       uniform float time;
 
@@ -19,11 +20,15 @@
       }
 
       float getImage(float x) {
-        if (func == 0) {
-          return vScale*amp*sin(angFreq * hScale * (x+time) + phase);
-        } else if (func == 1) {
-          return vScale*amp*cos(angFreq * hScale * (x+time) + phase);
+        float result = 0.0;
+        for(int i = 0; i < 3; i++){
+          if(notes[i] != 0.0){
+            result += vScale*amp*sin(2.0 * 3.141592 * notes[i] * hScale * (x+time) + phase);
+          } else {
+            break;
+          }
         }
+        return result;
       }
 
       void main(){
@@ -77,7 +82,7 @@
     <select id="y-note-selector">
       <option value="C4" selected="selected">C4</option>
       <option value="C4M">C4 Major</option>
-      <option value="F4F#">F4 + F4#</option>
+      <option value="F4F4#">F4 + F4#</option>
       <option value="zero">Zero</option>
     </select>
   </br>
