Add Second Wave

--- a/index.html
+++ b/index.html
@@ -99,12 +99,20 @@
       <option value="500.0">500.0 V</option>
     </select>
     <label>Y-Signal</label>
-    <select id="y-note-selector">
+    <label>Wave 1:</label>
+    <select id="wave1-y-note-selector">
       <option value="C4" selected="selected">C4</option>
       <option value="G4">G4</option>
       <option value="C4M">C4 Major</option>
       <option value="F4F4#">F4 + F4#</option>
       <option value="zero">Zero</option>
+    </select>
+    <label>Wave 2:</label>
+    <select id="wave2-y-note-selector">
+      <option value="C4">C4</option>
+      <option value="C4M">C4 Major</option>
+      <option value="F4F4#">F4 + F4#</option>
+      <option value="zero" selected="selected">Zero</option>
     </select>
   </br>
     <label>X-Scale:</label>
@@ -134,6 +142,7 @@
       <option value="C4M">C4 Major</option>
       <option value="F4F4#">F4 + F4#</option>
     </select>
+    <br />
   </body>
   <script type="text/javascript" src="app.js"></script>
 </html>
