--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         float newVScale = secondsPerBlock / 6.0;
 
         float result = 0.0;
-        for(int i = 0; i < 3; i++){
+        for(int i = 0; i < 3; i++) {
           if(notesX[i] != 0.0) {
-            result += newVScale*amp*sin(2.0 * 3.1415926535 * notesX[i] * newHScale * x + phase);
+            result += amp*sin(2.0 * 3.1415926535 * notesX[i] * x + phase);
           } else {
             break;
           }
@@ -37,9 +37,9 @@
 
       float getImageY(float x) {
         float result = 0.0;
-        for(int i = 0; i < 3; i++){
+        for(int i = 0; i < 3; i++) {
           if(notesY[i] != 0.0){
-            result += vScale*amp*sin(2.0 * 3.1415926535 * notesY[i] * hScale * x + phase);
+            result += 1.0*amp*sin(2.0 * 3.1415926535 * notesY[i] * 1.0 * x + phase);
           } else {
             break;
           }
@@ -47,15 +47,16 @@
         return result;
       }
 
-      void main(){
+      void main() {
         if (notesX[0] == 0.0) {
-          gl_Position.x = normalizeInput(vTimeSample,0.0,9999.0,-1.0,1.0);
+          //time = tInitial + vTimeSample/maxSamples*hDivisions*tDivision - tOffset;
+          gl_Position.x = normalizeInput(vTimeSample,0.0,9999.0,-1.0,1.0); // X = T
         } else {
-          gl_Position.x = getImage(normalizeInput((vTimeSample+time*10000.0),0.0,9999.0,-1.0,1.0));//getImage(vTimeSample); // normalize [0, 9999] -> [-1, 1]
+          gl_Position.x = getImage(normalizeInput(vTimeSample+time*10000.0,0.0,9999.0,-1.0,1.0)) / 1.0; //aka ESCALAR ; // normalize [0, 9999] -> [-1, 1]
         }
-        gl_Position.y = getImageY(normalizeInput((vTimeSample+time*10000.0),0.0,9999.0,-1.0,1.0));//getImageY(vTimeSample);
+        gl_Position.y = getImageY(normalizeInput((vTimeSample+time*10000.0),0.0,9999.0,-1.0,1.0)) / 1.0;
         // gl_Position.z = 0.0;
-        gl_Position.a = 1.0;
+        gl_Position.w = 1.0;
       }
     </script>
     <script id="grid-vertex-shader" type="x-shader/x-vertex">
