Fix position error

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
 
 <body>
   <title>CGI - Oscilloscope</title>
-  <canvas id="gl-canvas" width="1020" height="720">
-    Oops... your browser doesn't support the HTML5 canvas element"
-  </canvas>
+  <div>
+    <canvas id="gl-canvas" width="1020" height="720">
+      Oops... your browser doesn't support the HTML5 canvas element"
+    </canvas>
+  </div>
   <div id="wrapper" style="float: left;">
     <datalist id="center-tick">
       <option value="0"></option>
